updated collapse btn, fixed click bug and toggle btn

--- a/css/search.css
+++ b/css/search.css
@@ -64,7 +64,7 @@ body {
     top: 0%;
     width: 100%;
     z-index: 1;
-    padding:0.5em 0.8em;
+    padding:0.2em 0.8em;
     /* background-color:var(--white); */
     /* box-shadow: 2px 2px 0.2em #ddd; */
     cursor: pointer;
@@ -305,6 +305,10 @@ body {
     transform:translateX(-100%);
 }
 
+.directions.expand {
+    top:0%;
+}
+
 
 .input-group .mapboxgl-ctrl-geocoder{
     /* padding: 8px; */
@@ -315,6 +319,15 @@ body {
     position: absolute;
     top:2%;
     right:2%;
+}
+
+.expand-btn {
+    position: absolute;
+    top: 0%;
+    left: 45%;
+    background-color: #d8d8d9;
+    padding: 0em 1em;
+    color: var(--primary);
 }
 
 .drection-links {
@@ -328,10 +341,14 @@ body {
 
 .instructions {
     padding: 0.3em 1em;
-    height: 85vh;
+    height: 25vh;
     margin-top: 1.1em;
     font-size: 0.9rem;
     color: var(--black);
+}
+
+.instructions.expand {
+    height: 72vh;
 }
 
 #start {
@@ -384,6 +401,7 @@ body {
         width: 360px;
         height: 100vh;
         margin-bottom: 1em;
+        padding:0.5em 0.8em;
         box-shadow: none;
         background-color: var(--gray);
         border-top-right-radius: 16px;
@@ -487,5 +505,9 @@ body {
     }
     .mapboxgl-ctrl-group:not(:empty) {
         display: block;
+    }
+
+    .expand-btn {
+        display: none;
     }
 }
